[package]
name = "rlstats-rs"
version = "0.1.2"
authors = ["Scetch <me@scet.ch>"]
description = "API wrapper for https://rocketleaguestats.com/"
documentation = "https://docs.rs/rlstats-rs"
repository = "https://github.com/Scetch/rlstats-rs"
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"

keywords = ["rocketleague", "rocket-league", "stats", "rocketleaguestats"]
categories = ["api-bindings"]

[lib]
name = "rlstats"

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"